--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,28 @@
 language: erlang
 
 env:
-  - ERL_VERSION=17.5
+  - ERLANG_VERSION=17.5
 
 before_install:
   - kerl update releases
+  - mkdir artifacts
 
 install:
   - true
 
 script:
-  -
+  - kerl build $ERLANG_VERSION $ERLANG_VERSION
+  - kerl install $ERLANG_VERSION $HOME/otp/$ERLANG_VERSION
+  - source $HOME/otp/$ERLANG_VERSION/activate
+
+after_success:
+  - pushd $HOME/otp
+  - tar cjvf $TRAVIS_BUILD_DIR/artifacts/erlang-${ERLANG_VERSION}-x86_64.tar.bz2 $ERLANG_VERSION
+
+deploy:
+  provider: s3
+  upload_dir: ubuntu/12.04
+  skip_cleanup: true
+  bucket: travis-otp-releases
+  access_key_id: $ACCESS_KEY_ID
+  secret_access_key: $SECRET_ACCESS_KEY
