--- a/.travis.yml
+++ b/.travis.yml
@@ -34,3 +34,4 @@ deploy:
   bucket: travis-otp-releases
   access_key_id: $ACCESS_KEY_ID
   secret_access_key: $SECRET_ACCESS_KEY
+  acl: public_read
