Test it with Trusty edge

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: erlang
 matrix:
   include:
     - sudo: required
-      services:
-        - docker
+      dist: trusty
+      group: edge
       env:
         - RELEASE=trusty
     - sudo: required
