--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,11 @@ script: ./bin/compile
 after_success: ./bin/archive
 
 addons:
+  apt:
+    packages:
+      # Build time dependency for erlang-odbc. Inspired by:
+      # https://github.com/c0b/docker-erlang-otp/blob/master/19/Dockerfile
+      - unixodbc-dev
   artifacts:
     paths:
     - '${OS_NAME}'
