Use group: edge

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
     - sudo: required
       language: generic
       dist: xenial
+      group: edge
       env:
       - DIST=xenail
       before_script:
