Fix branching logic

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
 
 install:
   - |
-    if command -v kerl >&/dev/null; then
+    if ! command -v kerl >&/dev/null; then
       curl -O https://raw.githubusercontent.com/kerl/kerl/master/kerl
       chmod +x kerl
       sudo mv kerl /usr/local/bin/kerl
