Fix 'precise' job

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ jobs:
       name: trusty
     - sudo: required
       name: precise
+      dist: precise
     - sudo: required
       language: generic
       dist: xenial
